# polaris

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
c_api/: AutoTune_c.cc  AutoTune_c.cpp  CMakeLists.txt  Clustering_c.cc  Clustering_c.cpp  IndexBinary_c.cc  IndexBinary_c.cpp  IndexFlat_c.cc  IndexFlat_c.cpp  IndexIVFFlat_c.cc  IndexIVFFlat_c.cpp  IndexIVF_c.cc  IndexIVF_c.cpp  IndexLSH_c.cc  IndexLSH_c.cpp  IndexPreTransform_c.cc  IndexPreTransform_c.cpp  IndexReplicas_c.cc  IndexReplicas_c.cpp  IndexScalarQuantizer_c.cc  IndexScalarQuantizer_c.cpp  IndexShards_c.cc  IndexShards_c.cpp  Index_c.cc  Index_c.cpp  MetaIndexes_c.cc  MetaIndexes_c.cpp  VectorTransform_c.cc  VectorTransform_c.cpp  clone_index_c.cc  clone_index_c.cpp  clone_index_c.h  error_impl.cc  index_factory_c.cc  index_factory_c.cpp  index_io_c.cc  index_io_c.cpp  index_io_c.h  macros_impl.h
c_api/gpu/: DeviceUtils_c.cpp  GpuAutoTune_c.cpp  GpuClonerOptions_c.cpp  GpuIndex_c.cpp  GpuResources_c.cpp  StandardGpuResources_c.cpp  macros_impl.h
c_api/impl/: AuxIndexStructures_c.cc  AuxIndexStructures_c.cpp
c_api/utils/: distances_c.cc  distances_c.cpp
polaris/: AutoTune.cc  AutoTune.cpp  AutoTune.h  CMakeLists.txt  Clustering.cc  Clustering.cpp  Clustering.h  IVFlib.cc  IVFlib.cpp  IVFlib.h  Index.cc  Index.cpp  Index.h  Index2Layer.cc  Index2Layer.cpp  Index2Layer.h  IndexAdditiveQuantizer.cc  IndexAdditiveQuantizer.cpp  IndexAdditiveQuantizer.h  IndexAdditiveQuantizerFastScan.cc  IndexAdditiveQuantizerFastScan.cpp  IndexAdditiveQuantizerFastScan.h  IndexBinary.cc  IndexBinary.cpp  IndexBinary.h  IndexBinaryFlat.cc  IndexBinaryFlat.cpp  IndexBinaryFlat.h  IndexBinaryFromFloat.cc  IndexBinaryFromFloat.cpp  IndexBinaryFromFloat.h  IndexBinaryHNSW.cc  IndexBinaryHNSW.cpp  IndexBinaryHNSW.h  IndexBinaryHash.cc  IndexBinaryHash.cpp  IndexBinaryHash.h  IndexBinaryIVF.cc  IndexBinaryIVF.cpp  IndexBinaryIVF.h  (+187 more)
polaris/capi/: CMakeLists.txt  INSTALL.md  auto_tune_c.cc  auto_tune_c.h  clone_index_c.cc  clone_index_c.h  clustering_c.cc  clustering_c.h  error_impl.cc  example_c.c  index_binary_c.cc  index_binary_c.h  index_c.cc  index_c.h  index_factory_c.cc  index_factory_c.h  index_flat_c.cc  index_flat_c.h  index_io_c.cc  index_io_c.h  index_ivf_c.cc  index_ivf_c.h  index_ivf_flat_c.cc  index_ivf_flat_c.h  index_lsh_c.cc  index_lsh_c.h  index_pre_transform_c.cc  index_pre_transform_c.h  index_replicas_c.cc  index_replicas_c.h  index_scalar_quantizer_c.cc  index_scalar_quantizer_c.h  index_shards_c.cc  index_shards_c.h  macros_impl.h  meta_indexes_c.cc  meta_indexes_c.h  ngt_api.cc  ngtq_api.cc  ngtq_api.h  (+2 more)
polaris/core/: array_view.h  aux_index_structures.cc  aux_index_structures.h  common.cc  common.h  common_includes.h  defaults.h  defines.h  executor.cc  executor.h  heap.cc  heap.h  id_selector.cc  id_selector.h  index.cc  index.h  index_build_params.h  index_config.h  lock.h  log.cc  log.h  matrix_stats.cc  memory.h  metric_type.h  ngt_parameters.cc  ngt_parameters.h  object.h  ordered_key_value.h  parameters.h  percentile_stats.h  random.cc  random.h  report.h  result_handler.h  search_condition.cc  search_condition.h  search_context.h  sorting.cc  sorting.h  utils.cc  (+2 more)
polaris/cppcontrib/: SaDecodeKernels.h
polaris/datasets/: bin.h  fvecs.cc  fvecs.h  ivecs.cc  ivecs.h  random.cc  random.h  recall.cc  recall.h  to_float.cc  to_float.h  tsv.cc  tsv.h
polaris/distance/: comparator.cc  comparator.h  cosine_similarity.h  distance.cc  distance.h  distance_impl.cc  distance_impl.h  norm.h  object_distance.h  primitive.h  primitive_comparator.h  simd_utils.h
polaris/faiss/: auto_tune.cc  auto_tune.h  aux_index_structures.cc  clone_index.cc  heap.cc  heap.h  id_selector.cc  index.cc  index.h  index_2layer.cc  index_2layer.h  index_additive_quantizer.cc  index_additive_quantizer.h  index_additive_quantizer_fast_scan.cc  index_additive_quantizer_fast_scan.h  index_binary.cc  index_binary.h  index_binary_flat.cc  index_binary_flat.h  index_binary_from_float.cc  index_binary_from_float.h  index_binary_hash.cc  index_binary_hash.h  index_binary_hnsw.cc  index_binary_hnsw.h  index_binary_ivf.cc  index_binary_ivf.h  index_factory.cc  index_factory.h  index_fast_scan.cc  index_fast_scan.h  index_flat.cc  index_flat.h  index_flat_codes.cc  index_flat_codes.h  index_hnsw.cc  index_hnsw.h  index_id_map.cc  index_id_map.h  index_io.h  (+57 more)
polaris/gpu/: CMakeLists.txt  GpuAutoTune.cpp  GpuAutoTune.h  GpuCloner.cpp  GpuCloner.h  GpuClonerOptions.h  GpuDistance.cu  GpuDistance.h  GpuFaissAssert.h  GpuIcmEncoder.cu  GpuIcmEncoder.h  GpuIndex.cu  GpuIndex.h  GpuIndexBinaryFlat.cu  GpuIndexBinaryFlat.h  GpuIndexFlat.cu  GpuIndexFlat.h  GpuIndexIVF.cu  GpuIndexIVF.h  GpuIndexIVFFlat.cu  GpuIndexIVFFlat.h  GpuIndexIVFPQ.cu  GpuIndexIVFPQ.h  GpuIndexIVFScalarQuantizer.cu  GpuIndexIVFScalarQuantizer.h  GpuIndicesOptions.h  GpuResources.cpp  GpuResources.h  StandardGpuResources.cpp  StandardGpuResources.h
polaris/graph/: abstract_index.cc  abstract_index.h  abstract_scratch.h  disk_utils.cc  disk_utils.h  filter_utils.cc  filter_utils.h  index.cc  index.h  index_build_params.h  index_config.h  index_factory.cc  index_factory.h  logger.cc  (+26 more)
tests/: CMakeLists.txt  doubly_buffered_data_test.cc  test_RCQ_cropping.cc  test_RCQ_cropping.cpp  test_approx_topk.cc  test_approx_topk.cpp  test_binary_flat.cc  test_binary_flat.cpp  test_code_distance.cc  test_code_distance.cpp  test_cppcontrib_sa_decode.cc  test_cppcontrib_sa_decode.cpp  test_cppcontrib_uintreader.cpp  test_dealloc_invlists.cc  test_dealloc_invlists.cpp  test_distances_simd.cpp  test_fastscan_perf.cc  test_fastscan_perf.cpp  test_heap.cc  test_heap.cpp  test_hnsw.cpp  test_ivf_index.cc  test_ivf_index.cpp  test_ivfpq_codec.cc  test_ivfpq_codec.cpp  test_ivfpq_indexing.cc  test_ivfpq_indexing.cpp  test_lowlevel_ivf.cc  test_lowlevel_ivf.cpp  test_mem_leak.cc  test_mem_leak.cpp  test_merge.cc  test_merge.cpp  test_omp_threads.cc  test_omp_threads.cpp  test_ondisk_ivf.cc  test_ondisk_ivf.cpp  test_pairs_decoding.cc  test_pairs_decoding.cpp  test_params_override.cc  (+11 more)
(+872 files in other folders)
